// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create user if does not exist 1`] = `
Object {
  "acceptedMarketing": false,
  "bio": null,
  "company": null,
  "createdAt": 2021-08-11T00:00:00.000Z,
  "devcardEligible": false,
  "email": null,
  "github": "idoshamun",
  "hashnode": null,
  "id": "abc",
  "image": "https://daily.dev/image.jpg",
  "infoConfirmed": false,
  "name": "Ido",
  "permalink": "http://localhost:5002/idoshamun",
  "portfolio": null,
  "profileConfirmed": false,
  "referral": null,
  "reputation": 10,
  "timezone": null,
  "title": null,
  "twitter": "idoshamun",
  "updatedAt": Any<Date>,
  "username": "idoshamun",
}
`;

exports[`should update an existing user 1`] = `
Object {
  "acceptedMarketing": false,
  "bio": null,
  "company": null,
  "createdAt": 2021-08-11T00:00:00.000Z,
  "devcardEligible": false,
  "email": null,
  "github": "idoshamun",
  "hashnode": null,
  "id": "abc",
  "image": "https://daily.dev/image.jpg",
  "infoConfirmed": true,
  "name": "Ido",
  "permalink": "http://localhost:5002/idoshamun",
  "portfolio": null,
  "profileConfirmed": false,
  "referral": "nimrod",
  "reputation": 10,
  "timezone": null,
  "title": null,
  "twitter": "idoshamun",
  "updatedAt": Any<Date>,
  "username": "idoshamun",
}
`;
